@@ -88,7 +88,8 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
-     CLOCK: [2016-10-18 mar. 01:35]
+     CLOCK: [2016-10-19 mer. 00:10]--[2016-10-19 mer. 00:24] =>  0:14
+     CLOCK: [2016-10-18 mar. 01:35]--[2016-10-18 mar. 01:55] =>  0:20
      CLOCK: [2016-10-18 mar. 01:08]--[2016-10-18 mar. 01:19] =>  0:11
      CLOCK: [2016-10-15 sam. 01:44]--[2016-10-15 sam. 02:37] =>  0:53
      CLOCK: [2016-10-14 ven. 23:01]--[2016-10-15 sam. 00:15] =>  1:14
@@ -120,11 +121,15 @@
   - [X] Change DEPENDENCIES file
   - [X] Can't find "TaharezLook/MouseArrow" image or get a segfault
   - [X] Mouse Coords are wrong
-- [-] Next steps to get a working GUI
+- [X] Next steps to get a working GUI
   - [X] Hide the system mouse cursor
   - [X] Seems the resize icon is wrong too
     Maybe try the Vanilla mouse cursor : do not work
     Testing with Taharez-based layout : it works fine
+- [ ] Must manually build CEGUI 0.8 for CI
+  because CEGUI-0' and 'CEGUI-0-OGRE' can't be found
+  - [ ] Trying to build (follow http://cegui.org.uk/wiki/Building_from_source)
+- [ ] Continue client work
   - [ ] Make the exit button work
   - [ ] Maybe add a static image as logo
   - [ ] Client has a segfault if we cancel Ogre configuration dialog
